Sigil-2.5.2
   Bug Fixes
     - fix missing python function replace "file_name" in DryRun and Filter Replacements
     - fix CV to Preview syncing to self-closing tags that are bare in body
     - workaround recent Qt changes by making PV sync to top when code in CV is not well formed


Sigil-2.5.1
   Bug Fixes
     - fix CodeView to Preview syncing when cursor on empty lines
     - fix build warnings related to overloaded-virtual

   New Features
     - Add AppImage .desktop file with version information
     - strip AppImage bins when possible
     - update docs to include Sigil_Plugin_Framework version 15
     

Sigil-2.5.0
   Bug Fixes
     - allow SVG resources to be selectable alongside Image resources and context menu to work in BookBrowser
     - because Linux has multiple light and dark themes (but different)
         always send out our internal theme change signal when palette changes
     - detect urls in altimg attributes in math tags and properly update them is changed
     - disable workaround for FR open interfering in MainWindow restorestate as no longer needed
     - fix incorrect custom dc:identifier creation by Metadata Editor.
     - fix missing SearchEditor Model Controls tooltips
     - fix WebEngineProfile issues on Windows with multiple instances of Sigil running
     - fix dark vs light corner cases in Linux
     - quiet extraneous warnings about WebEngine spellcheck dictionaries not found
     - fix bug when duplicate filenames exist when updating all manifest ids from file names
     - fix bug with remote resources not being properly loaded by Preview after a http cache clear
     - fix updating tab names after filename changes (Thank you BeckyEbook)
     - fix bug in Url scheme hander that made using Preview's Inspector fail at times
     - fix incorrect custom identifier generated by our Metadata Editor
     - properly detect and update altimg urls in mathml tags

   New Features